--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     WIP.
   </head>
   <body>
-    <a href src="/privacy.html">Privacy Policy</a>
+    <a href="/privacy.html">Privacy Policy</a>
   </body>
 </html>
