--- a/privacy_unicore.html
+++ b/privacy_unicore.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                    Atude built the MyWAM app as
+                    Atude built the Unicore app as
                     an Open Source app. This SERVICE is provided by
                     Atude at no cost and is intended for
                     use as is.
@@ -28,7 +28,7 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-                    MyWAM unless otherwise defined in this Privacy
+                    Unicore unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
