--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=https://atude.github.io/portfolio" />
+    <meta http-equiv="Refresh" content="0; url=https://atude.github.io/atude-ghp" />
   </head>
 </html>
