--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
     <meta http-equiv="Refresh" content="0; url=https://atude.github.io/atude-ghp" />
+    <meta name="description" content="Moz is a software engineer in Sydney, Australia with experience building scalable, maintainable and beautiful apps."/>
   </head>
 </html>
